--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ packages = [{include = "water_mark_remover"}]
 python = ">=3.10,<3.12"
 tensorflow = {version = "2.14.1", extras = ["and-cuda"]}
 opencv-python = "^4.8.1.78"
+scikit-learn = "^1.3.2"
 
 
 [build-system]
