--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,8 @@ python = ">=3.10,<3.12"
 tensorflow = {version = "2.14.1", extras = ["and-cuda"]}
 opencv-python = "^4.8.1.78"
 scikit-learn = "^1.3.2"
-
+ipykernel = "^6.27.1"
+pyyaml = "^6.0.1"
 
 [build-system]
 requires = ["poetry-core"]
