--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ opencv-python = "^4.8.1.78"
 scikit-learn = "^1.3.2"
 ipykernel = "^6.27.1"
 pyyaml = "^6.0.1"
+matplotlib = "^3.8.2"
 
 [build-system]
 requires = ["poetry-core"]
