--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ scikit-learn = "^1.3.2"
 ipykernel = "^6.27.1"
 pyyaml = "^6.0.1"
 matplotlib = "^3.8.2"
+wandb = "^0.16.1"
 
 [build-system]
 requires = ["poetry-core"]
