--- a/config/entrega_config.yml
+++ b/config/entrega_config.yml
@@ -8,13 +8,13 @@ load_and_prepare_data:
   height: 128
 build_discriminator:
   input_shape: [128, 128, 3]
-  filters: [20, 40, 80]
+  filters: [20, 40, 80, 80]
   kernel_size: 3
-  strides: [2, 2, 2]
+  strides: [2, 2, 2, 2]
   activation: "leaky_relu"
   alpha: 0.2
   dropout_rate: 0.4
-  use_batch_norm: true
+  use_batch_norm: false
   dense_units: 512
 generator:
   filter_sizes: [32, 64, 128]
